<resources>
    <string name="app_name">Buscaminas</string>
    <string name="main_title">WELCOME TO BUSCAMINAS</string>
    <string name="welcome_text">Welcome User Text</string>
    <string name="title_major">WELCOME</string>
    <string name="ajustes_image">ajustes image</string>
    <string name="salir_text">Salir</string>
    <string name="button_iniciar">INICIAR PARTIDA</string>
    <string name="button_ayuda">AYUDA</string>
    <string name="image_bomb">Es uan imagen de una bomba</string>
    <string name="text_ayuda">
        El juego consiste en despejar todas las casillas de una parrilla que no oculten una mina.\n
        Algunas casillas tienen un número, este número indica las minas que suman todas las casillas circundantes. Así, si una casilla tiene
        el número 3, significa que de las ocho casillas que hay alrededor ( si no es en una esquina o borde)
        hay 3 con minas y 5 sin minas.\n
        Si se descubre una casilla con una mina SE PIERDE la partida. En otro caso, descubres todas las
        casillas sin mina, GANAS!!\n
        Puedes configurar el nº de filas de la parrilla, el porcentage de minas en la misma y si quieres que
        haya un tiempo máximo para completar el juego.
    </string>
    <string name="ayuda_title">Bienvenido al juego del BUSCA MINAS!</string>
    <string name="title_section">AYUDA</string>
    <string name="description_ayuda">description</string>
    <string name="back_pantalla_inicio">VOLVER</string>
    <string name="mida_graella"> Tamaño de la parrilla</string>
    <string name="title_activity_partida">Partida</string>
    <string name="quitMessageConfirmation">Está seguro de que desea abandonar la aplicación?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="casillas"></string>
    <string name="DadesDePartida">DadesDePartida</string>
    <string name="partida_en_marxa">PARTIDA EN MARXA</string>
    <string name="CasillasRestantes">casillas_restantes</string>
    <string name="TiempoRestante">tiempo_restante</string>
    <string name="ArrayOrientation">array_orientation</string>
    <string name="ListBombs">list_bombs</string>
    <string name="FlagsPosades">flags_posades</string>
    <string name="IsFinished">finished?</string>
    <string name="CasillasPorDescubrir">Casillas por descubrir: </string>
    <string name="GAMEOVER">GAME OVER</string>
    <string name="start">start</string>
    <string name="Music">Music</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="PartidaStatus">partida_status</string>
    <string name="ReceivedMusic">ReceivedMusic</string>
    <string name="UserNameKEY">user_name</string>
    <string name="TiempoTotal">tiempo_total</string>
    <string name="TotalMinas">total_minas</string>
    <string name="PercentatgeEscollitMines">porcentage_minas_escogidas</string>
    <string name="fromFinal">from final</string>
    <string name="CasillasTotales">casillas_totales</string>
    <string name="CasellesSeleccionades">caselles_seleccionades</string>
    <string name="Data_Log">data_log</string>
    <string name="facil">Fácil - 150s</string>
    <string name="medio">Medio - 80s</string>
    <string name="duro">Duro - 60s</string>
    <string name="legendario">Leyenda - 40s</string>
    <string name="seconds"></string>
    <string name="title_activity_pantalla_final">PantallaFinal</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="resultados_partida">RESULTADOS PARTIDA</string>
    <string name="dia_activityfinal">Día y hora</string>
    <string name="log_activityfinal">Valores del LOG</string>
    <string name="calavera_description">es una imagen de calavera</string>
    <string name="message_time_over">SE HA ACABADO EL TIEMPO</string>
    <string name="victoria_text">VICTORIA !!</string>
    <string name="desciption_victoria">copa_victoria</string>
    <string name="text_email">E-mail destinatario</string>
    <string name="email_button">Enviar E-mail</string>
    <string name="nueva_partida_button">Nueva Partida</string>
    <string name="sonido_button">SONIDO</string>
    <string name="game_over">gave over image</string>
    <string name="message_victoria">VICTORIA !!</string>
    <string name="copa_image">copa</string>
    <string name="message_flag">*Para poner/quitar una bandera manten la celda pulsada</string>
    <string name="TimespinnerTitle">Tiempos</string>
    <string-array name="TimespinnerChoices">
        <item>Fácil - 150s</item>
        <item>Medio - 80s</item>
        <item>Duro - 60s</item>
        <item>Leyenda - 40s</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">marc-saba@hotmail.com</string>
    <string name="configuration_name">CONFIGURACIÓN</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="control_de_tiempo">Control de tiempo</string>
    <string name="de_minas">% de Minas</string>
    <string name="_15">15</string>
    <string name="_25">25</string>
    <string name="_35">35</string>
    <string name="empezar">EMPEZAR</string>
    <string name="username">UserName</string>
    <string name="timer_image">timer image</string>
    <string name="parrilla_iamge">parrilla_iamge</string>
    <string name="ninot_user">ninot_user</string>
    <string name="minas_iamge">minas_iamge</string>
    <string name="alias_identificativo">Alias Identificativo</string>
    <string name="log_section">LOG SECTION:</string>
    <string name="casillas_seleccionadas">Casillas Seleccionadas</string>
    <string name="algo_te_explot">ALGO TE EXPLOTÓ</string>


</resources>