<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:orientation="vertical"
        android:padding="1dp">

        <TextView
            android:id="@+id/title_partidaenmarxa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partida_en_marxa"
            android:textStyle="bold" />/>

        <TextView
            android:id="@+id/text_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_flag" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seconds" />

        <TextView
            android:id="@+id/casillasid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/casillas" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:horizontalSpacing="2dp"
        android:numColumns="auto_fit"
        android:padding="1dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp"></GridView>

</LinearLayout>