<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/title_inicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="208dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/bomb_image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAyuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ayuda" />

        <Button
            android:id="@+id/buttonIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_iniciar" />

        <Button
            android:id="@+id/buttonsalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir_text" />
    </LinearLayout>

    <Switch
        android:id="@+id/switchMusic"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:shadowColor="#FFFFFF"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="SONIDO"
        android:textSize="18sp" />

</LinearLayout>