<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".FinalActivity">

    <TextView
        android:id="@+id/partida_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/resultados_partida"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_activityfinal" />

    <EditText
        android:id="@+id/editTextTextdiayhora"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_activityfinal" />

    <EditText
        android:id="@+id/editTextTextlog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="E-mail destinatario" />

    <EditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/teal_700"
        android:drawableLeft="@drawable/ic_mail"
        android:text="Enviar E-mail"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="164dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/teal_700"
        android:drawableLeft="@drawable/ic_backarrowgreen"
        android:text="Nueva Partida"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button3"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorButtonNormal"
        android:text="Salir"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_poweroff"/>

</LinearLayout>